phase0/k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: indexer
  annotations:
    ingress.kubernetes.io/target-proxy: replace-me
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: query-node
              servicePort: 80
          - path: /prometheus/*
            backend:
              serviceName: prometheus
              servicePort: 80
